# todolist

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  api_main.py  docker-compose.yml  main.py  pyproject.toml  scheduler.py
alembic/: env.py
core/: exceptions.py  models.py  services.py
core/jobs/: __init__.py  autoclose_overdue.py
core/services/: __init__.py  project_services.py  task_services.py
core/validators/: project_validators.py  task_validators.py
data/: database.py  env_loader.py  in_memory_db.py
data/migrations/versions/: 5bd32f8b1456_change_task_id_to_task_uuid.py  bce60a628a7c_change_task_due_date_to_task_deadline.py  f6fdc4d0d14b_initial_tables.py
data/models/: __init__.py  project_model.py  task_model.py
data/repositories/: base.py  project_repository.py  task_repository.py
interface/: arg_parser.py  cli.py
interface/api/: __init__.py  routers.py
interface/api/controller_schemas/: __init__.py
interface/api/controller_schemas/requests/: project_request_schema.py  task_request_schema.py
interface/api/controller_schemas/responses/: project_response_schema.py  task_response_schema.py
interface/cli/: __init__.py  cli.py
utils/: id_generator.py  validators.py
