[project]
name = "todolist"
version = "0.1.0"
description = ""
authors = [
    {name = "mk master",email = "79350888+MKmasterg@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
